--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ footer {
     </div>
 
     <footer>
-        © 2026 Countdown • AI Enhanced
+        © 2026 Countdown • AI Enhanced by anonymous
     </footer>
 </div>
 
